syntax = "proto3";

package messages.update_device_humidity;

option go_package = "farm/src/proto/messages/update_device_humidity";

message UpdateDeviceHumidityRequest {
  string device_serial=1;
  float min_humidity=2;
  float max_humidity=3;
}

message UpdateDeviceHumidityResponse {
  bool status=1;
  string error_message=2;
}